# FraudShield

./: .replit  DOWNLOAD_INSTRUCTIONS.txt  README.md  app.py  create_download_package.py  pyproject.toml
attached_assets/: Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-slider-elements-with-the-same-auto--1746278627010.txt  content-1746277062032.md  content-1746277093376.md
pages/: 1_Data_Exploration.py  2_Feature_Engineering.py  3_Model_Building.py  4_Model_Evaluation.py  5_Prediction.py
utils/: model_utils.py  preprocessing.py  visualization.py
